--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 	<h1><span aria-hidden="true" data-icon="&#xE087;" class="github-icon"></span> Github for Web Designers</h1>
     </header>
     <nav id="pageNav">
+	<h2>More stuff here</h2>
     </nav>
     <main>
     </main>
-    <footer>
+    <footer>Copyright info goes here
     </footer>
         <script>
 //use the modernizr load to load up external scripts. This will load the scripts asynchronously, but the order listed matters. Although it will load all scripts in parallel, it will execute them in the order listed
