--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <body>
     <header>
 	<h1>Page title</h1>
+	<h2>2nd Title here</h2>
     </header>
     <nav id="pageNav">
     </nav>
     <main>
     </main>
-    <footer>
+    <footer>Footer goes here
     </footer>
         <script>
 //use the modernizr load to load up external scripts. This will load the scripts asynchronously, but the order listed matters. Although it will load all scripts in parallel, it will execute them in the order listed
